# matrix_calculator

./: .gitignore  CMakeLists.txt  README.md  makefile  matrix_calc
.cache/clangd/index/: add_sub.c.5A325AA6756F5F95.idx  add_sub.h.E1510ECCBC20D027.idx  determinant.c.E74DE3E87B33C79F.idx  determinant.h.79C1468A33B20EC2.idx  event_handler.cpp.839A19CB0D033AC6.idx  exponentiate.c.874171D99D4E4151.idx  exponentiate.h.64968DAE68022478.idx  gauss.c.2DD918E72E6D92C9.idx  gauss.h.C5E34FF00C247CA1.idx  history.c.3FEC39A417D0B249.idx  inverse.c.1A523D881DDE4694.idx  inverse.h.DE52D59C0DA30A0F.idx  main.c.835CA31D857A39F7.idx  multiply.c.E7BFCB5A3A6C78A0.idx  multiply.h.F6B28E530D525171.idx  operations_loop.c.E5384716CA4E2D96.idx  operations_loop.h.A5E38EDF3ED1BB4C.idx  rank.c.B25D64DC69707D12.idx  rank.h.24319693BE6C048C.idx  transpose.c.37FB632969502CCB.idx  transpose.h.73AAF1158BD48ED7.idx  ui.cpp.E5D041653FFBDDB5.idx  utils.c.39A3D98FEBCE7F32.idx  utils.h.B7E7EA384006F81D.idx
c_algebra/: main.c  matrix_calc
c_algebra/include/: utils.h
c_algebra/laplace/: laplace.c  wikipedia.py
c_algebra/mat_mult/: mat_mult.c
c_algebra/src/: main.c  utils.c
c_algebra/src/operations/: add_sub.c  determinant.c
c_algebra/transpose/: transpose.c
include/: common_structs.h  operations_loop.h  utils.h
include/operations/: determinant.h  exponentiate.h  inverse.h  rank.h  transpose.h
interface/: CMakeLists.txt
interface/src/: interface.c
matrix_history/src/: history.c
operations/: CMakeLists.txt
operations/include/: add_sub.h  determinant.h  exponentiate.h  funcs.h  gauss.h  gauss_elimination.h  inverse.h  matrix_power.h  multiply.h  multiply_matrices.h  operations.h  operations_loop.h  operations_utils.h  rank.h  transpose.h  utils.h
operations/src/: add_sub.c  determinant.c  exponentiate.c  gauss.c  gauss_elimination.c  inverse.c  matrix_power.c  multiply.c  multiply_matrices.c  operations.c  operations_loop.c  operations_utils.c  rank.c  transpose.c  utils.c
src/: main.c  operations_loop.c  utils.c
src/operations/: exponentiate.c  inverse.c  multiply.c  rank.c  transpose.c
state_manager/: CMakeLists.txt
state_manager/include/: state.h
state_manager/src/: state.c
ui/: CMakeLists.txt
ui/include/: temp.h
ui/src/: temp.c
